Restore vertical alignment correction of tab-icons

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -3,6 +3,7 @@
 	text-align: center;
 	width: 16px;
 	line-height: 1;
+	position: relative;
 	display: inline-block;
 	-webkit-font-smoothing: antialiased;
 }
